--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/indutny/ninja.js#readme",
   "dependencies": {
+    "async": "^2.0.0-rc.6",
+    "yargs-parser": "^2.4.0"
   },
   "devDependencies": {
     "mocha": "^2.5.3"
