--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Minimalistic `ninja` build system implementation",
   "main": "lib/ninja.js",
   "scripts": {
-    "test": "mocha --reporter=spec test/*-test.js"
+    "lint": "make lint",
+    "format": "make format",
+    "test": "mocha --reporter=spec test/*-test.js && npm run lint"
   },
   "bin": {
     "ninja.js": "./bin/ninja.js"
@@ -30,6 +32,7 @@
     "yargs-parser": "^2.4.0"
   },
   "devDependencies": {
+    "eslint": "^2.13.1",
     "mocha": "^2.5.3"
   }
 }
